[gd_scene load_steps=3 format=3 uid="uid://5crgxqylm0hj"]

[ext_resource type="Script" path="res://itens/scripts/wood_soil.gd" id="1_x11jm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8h54l"]
size = Vector2(48, 48)

[node name="WoodSoil" type="Area2D"]
script = ExtResource("1_x11jm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8h54l")
debug_color = Color(0.896603, 0.247967, 0.506264, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="item_picked_up" from="." to="." method="_on_item_picked_up"]
